--- a/let-russ-cook.Rmd
+++ b/let-russ-cook.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Letting Russ Cook"
 author: "Richard Anderson"
-date: "7/18/2020"
 output: html_document
 ---
 
@@ -17,6 +16,9 @@ library(workflows)
 library(dials)
 library(tune)
 library(DT)
+library(brms)
+library(arm)
+library(tidybayes)
 
 set.seed(1234)
 
@@ -33,12 +35,50 @@ post16 <- filter(dat, season >= 2016 &
          def_to = if_else(posteam_type == 'away', home_timeouts_remaining, away_timeouts_remaining)) %>%
   dplyr::select(qb_dropback, down, ydstogo, yardline_100, score_differential, qtr, half_seconds_remaining, off_to, def_to)
 
-xgb_res <- readRDS('C:/Users/richjand/Documents/xgb-grid-search.RDS')
+xgb_res <- readRDS('C:/Users/richjand/Documents/nfl-run-pass/rds-objects/xgb-grid-search.RDS')
+final_mod <- readRDS('C:/Users/richjand/Documents/nfl-run-pass/rds-objects/final-mod-test-dat.RDS')
+final_qb_mod <- readRDS('C:/Users/richjand/Documents/nfl-run-pass/rds-objects/final-full-xgb.RDS')
+fit_epa <- readRDS('C:/Users/richjand/Documents/nfl-run-pass/rds-objects/with_epa_model.RDS')
+fit_no_epa <- readRDS('C:/Users/richjand/Documents/nfl-run-pass/rds-objects/no_epa_model.RDS')
+
+samps_epa <- rstan::extract(fit_epa, pars = 'mu')$mu
+quantile_025_epa <- apply(samps_epa, 2, quantile, .025)
+quantile_975_epa <- apply(samps_epa, 2, quantile, .975)
+mean_epa <- apply(samps_epa, 2, mean)
+
+samps_no_epa <- rstan::extract(fit_no_epa, pars = 'mu')$mu
+quantile_025_no_epa <- apply(samps_no_epa, 2, quantile, .025)
+quantile_975_no_epa <- apply(samps_no_epa, 2, quantile, .975)
+mean_no_epa <- apply(samps_no_epa, 2, mean)
+
+teams <- dat %>%
+  filter(season >= 2016 & !is.na(posteam)) %>%
+  dplyr::select(posteam, season) %>%
+  mutate(team_string = str_c(posteam, '-', season),
+         team_idx = as.numeric(factor(team_string))) %>%
+  group_by(posteam, season) %>%
+  summarise(team_idx = max(team_idx)) %>%
+  ungroup()
+  
+teams$q_025_epa <- quantile_025_epa
+teams$q_975_epa <- quantile_975_epa
+teams$mean_epa <- mean_epa
+
+teams$q_025_no_epa <- quantile_025_no_epa
+teams$q_975_no_epa <- quantile_975_no_epa
+teams$mean_no_epa <- mean_no_epa
+
 ```
 
-I am a Seahawks fan and a data scientist. As such, I have strong and predictable feelings about how the Seahawks have chosen to chosen to use Russell Wilson in the post Legion of Boom era. There's a feeling among fans that the Seahawks are too rigid in their philosophy, choosing to emphasize an up-and-down running game instead of putting the ball in Russ' hands and letting the chips fall where they may. 
+I am a Seahawks fan and a data scientist. As such, I have strong and predictable feelings about how the Seahawks have chosen to chosen to use Russell Wilson in the post Legion of Boom era. There's a feeling among fans that the Seahawks are too rigid in their philosophy, choosing to emphasize an up-and-down running game instead of putting the ball in Russ' hands and letting the chips fall where they may. I generally agree with this feeling. So does Russell, apparently!
 
 [Warren Sharp](https://twitter.com/SharpFootball/status/1281657545598341121) recently posted that in what we might consider neutral game states where the Seahawks are not forced to run or throw, the Seahawks choose to run at rates matched only by teams with bad quarterbacks. Most analyses I've seen of this question do something similar to Sharp where you identify a subset of plays that are somewhat game script neutral and look at the team's tendencies. I'll approach this a little differently. I'm going to use data from the good people at [nflfastR](https://github.com/mrcaseb/nflfastR) to estimate the probability of a qb dropback given the game state, a multilevel model to estimate just how little the Seahawks passed relative to what we would expect given our estimated dropback probabilities, followed by another multilevel model to estimate how much run-heavier the Seahawks are given the game states they faced and the fact that they have one of the best quarterbacks in the league.
+
+## Conclusions
+
+I don't think it will surprise anyone when I say that the Seahawks have not let Russ cook. It might surprise people that the 2018 Seahawks, once accounting for game script and passing ability lapped the field in terms of run-heaviness. Below I'll show the predicted probability of every team from 2016-2019 running a perfectly neutral game script where the probability of a run is .5. 
+
+
 
 ## Estimating Pr(QB Dropback)
 
@@ -50,11 +90,11 @@ Ultimately the model I'll want to fit is:
 
 $y_{it} \sim Bernoulli(p_{it})$
 
-$logit(p_{it}) = \alpha + \gamma_{t} + \beta_{1}\hat{p}_i + \beta_{2}qb_{i}$
+$logit(p_{it}) = \alpha + \gamma_{t} + \beta_{1}\hat{p}_i + \beta_{2}EPA_{it}$
 
 </center>
 
-where $y_{it}$ is going to be whether team $t$ called a pass on play $i$, $\gamma_{t}$ is a random effect for team, $\hat{p}_i$ is the probability of a qb dropback that we'll generate with our xgboost model, and $qb_{i}$ is going to be the ability of the quarterback for play $i$ which we'll measure using yet another multilevel model. By including the probability of a dropback as well as the ability of the quarterback we can interpret $/gamma$ as a measure of team tendencies, having controlled for game state and quarterback ability.
+where $y_{it}$ is going to be whether team $t$ called a pass on play $i$, $\gamma_{t}$ is a random effect for team, $\hat{p}_i$ is the probability of a qb dropback that we'll generate with our xgboost model, and $EPA_{it}$ is going to be the passing ability of the offensive team $t$ for play $i$ which we'll measure using yet another multilevel model. By including the probability of a dropback as well as the ability of the team we can interpret $/gamma$ as a measure of team tendencies, having controlled for game state and quarterback ability.
 
 I predict the probability of a dropback using the nflfastR-provided variables that collectively capture the game state at the time of the play. These are:
 
@@ -79,7 +119,7 @@ dat_train <- training(dat_split)
 dat_test <- testing(dat_split)
 ```
 
-We're going be tuning our xgboost parameters so we'll want to be able to cross-validate. We can create cross-validation sets using <code>vfold_cv()</code> 
+We're going be tuning our xgboost parameters so we'll want to be able to cross-validate. We can create cross-validation sets using <code>vfold_cv()</code>.
 
 ```{r}
 qb_folds <- vfold_cv(dat_train)
@@ -87,7 +127,7 @@ qb_folds <- vfold_cv(dat_train)
 
 
 ### Prepping the Model
-Next we'll define a recipe using the <code>recipe()</code> function from the <code>recipes</code> package. Recipes involve setting a formula that looks like what you use to train most data in R and doing any pre-processing (scaling, normalizing, etc...) that you want to do to your variables. Since I'm working with xgboost I don't need to worry about preprocessing so I'll just define my formula below.
+Next we'll define a recipe using the <code>recipe()</code> function from the <code>recipes</code> package. Recipes involve setting a formula that looks like what you use to train most models in R and doing any pre-processing (scaling, normalizing, etc...) that you want to do to your variables. Since I'm working with xgboost I don't need to worry about preprocessing so I'll just define my formula below.
 
 ```{r}
 qb_recipe <- recipe(qb_dropback ~ down + 
@@ -134,7 +174,7 @@ qb_workflow <- workflow() %>%
 
 ### Parameter Tuning
 
-Now it's time to actually do some modeling! We'll use our cross-validation folds to try a bunch of different potential parameter values and return which gives us the best out of sample fit. We'll try 40 different combinations sampled from across the hyperparameter space. Note that the <code>mtry</code> and <code>sample_size</code> parameters require addition arguments. <code>mtry()</code> refers to the number of columns to be sampled which depends on the number of variables you're using at each split. This is one where you need to be careful. If the data frame you specify for <code>finizalize</code> has more variables than you actually plan on training with, you will waste your time testing mtry values that don't make any sense for your problem. The <code>sample_size</code> argument requires a number between 0 and 1 as it's the proportion of the data that you'll use in the fitting routine.
+Now it's time to actually do some modeling! We'll use our cross-validation folds to try a bunch of different potential parameter values and return which gives us the best out of sample fit. We'll try 40 different combinations sampled from across the hyperparameter space. Note that the <code>mtry</code> and <code>sample_size</code> parameters require additional arguments. <code>mtry()</code> refers to the number of columns to be sampled at each split. This is one where you need to be careful. If the data frame you specify for <code>finizalize</code> has more variables than you actually plan on training with, you will waste your time testing mtry values that don't make any sense for your problem. The <code>sample_size</code> argument requires a number between 0 and 1 as it's the proportion of the data that you'll use in the fitting routine.
 
 ```{r}
 xgb_grid <- grid_latin_hypercube(
@@ -165,7 +205,7 @@ Julia Silge's post had a plot to show the relationship between different paramet
 xgb_res %>%
   collect_metrics() %>%
   filter(.metric == "roc_auc") %>%
-  select(mean, mtry:sample_size) %>%
+  dplyr::select(mean, mtry:sample_size) %>%
   pivot_longer(mtry:sample_size,
                values_to = "value",
                names_to = "parameter"
@@ -189,7 +229,7 @@ qb_xgb <- finalize_workflow(
 
 At this point we're ready to evaluate the performance of the model trained on our training data with our chosen hyperparameters on our test data which we can do with the <code>last_fit()</code> function. We'll need to give the function our finalized workflow as well as our split data.
 
-```{r}
+```{r, eval = F}
 final_mod <- last_fit(qb_xgb, dat_split)
 ```
 
@@ -210,7 +250,7 @@ final_mod %>%
     color = "gray50",
     size = 1.2
   ) +
-  ggtitle('ROC Curve')
+  ggtitle('ROC Curve') +
   theme_minimal()
 ```
 
@@ -238,9 +278,11 @@ final_mod %>%
 
 Finally, now that we've built some confidence in the model we're going to build (using <code>fit()</code>) and predict (using <code>predict()</code>) the model on all data since 2016.
 
-```{r}
+```{r, eval = F}
 final_qb_mod <- fit(qb_xgb, post16)
+```
 
+```{r}
 post16_pred_dat <- filter(dat, season >= 2016 & 
                    season_type == 'REG' & 
                    down %in% c(1,2,3) &
@@ -249,7 +291,7 @@ post16_pred_dat <- filter(dat, season >= 2016 &
   mutate(qb_dropback = factor(qb_dropback),
          off_to = if_else(posteam_type == 'away', away_timeouts_remaining, home_timeouts_remaining),
          def_to = if_else(posteam_type == 'away', home_timeouts_remaining, away_timeouts_remaining)) %>%
-  dplyr::select(qb_dropback, down, ydstogo, yardline_100, score_differential, qtr, half_seconds_remaining, off_to, def_to, epa, posteam)
+  dplyr::select(qb_dropback, down, ydstogo, yardline_100, score_differential, qtr, half_seconds_remaining, off_to, def_to, epa, posteam, defteam, season)
 
 post16_pred_dat$dropback_prob <- predict(final_qb_mod, new_data = post16_pred_dat, type = 'prob')$.pred_1
 ```
@@ -272,44 +314,107 @@ post16_pred_dat %>%
 
 ## Measuring Team Passing Ability
 
-At this point we could stop and just build a multilevel model with our pass probability and random effects for team, but part of why this question is interesting and/or infuriating is that there's a feeling that teams ahta are good at throwing the ball are generally more likely to throw, making Russel Wilson's usage even more of an outlier than we might otherwise believe. That requires that we measure team passing ability.
+At this point we could stop and just build a multilevel model with our pass probability and random effects for team, but part of why this question is interesting and/or infuriating is that there's a feeling that teams that are good at throwing the ball should generally more likely to throw, making Russell Wilson's usage even more of an outlier than we might otherwise believe. That requires that we measure team passing ability.
 
 Completion Percentage Over Expectation (CPOE) and Expected Points Added (EPA) per play are available from nflscrapR and I'm going to use EPA per play. The primary reason for EPA over CPOE is that the decision faced by the coach is one of weighting the expected values of running vs. passing given the ability of their offense, not necessarily the raw ability of their quarterback. If you had a QB who was good but an offensive coordinator who couldn't get them open it might be reasonable to emphasize running, even if the true talent of the quarterback was high. Ultimately I expect it'll make a small difference but I do think that EPA/play more closely maps onto the decision faced by the coach.
 
-I come from baseball analytics and we love multilevel models. The ability to account for repeated observations and differing sample sizes makes it a natural for sports analytics where we're repeatedly observing the same units. I'm going to use the <code>lme4</code> package to fit a model that estimates EPA with an intercept and random effects for team/season. This will return regularized estimates of EPA/play for each team in each season which we'll use as our proxy for how good a team is at passing the ball.
+I come from baseball analytics and we love multilevel models. The ability to account for repeated observations and differing sample sizes makes it a natural for sports analytics where we're repeatedly observing the same units. I'm going to use the <code>lme4</code> package to fit a model that estimates EPA with an intercept and random effects for team/season. This will return regularized estimates of EPA/play for each team in each season which we'll use as our proxy for how good a team is at passing the ball. The interpretation of the effects in the tables below is that they represent the EPA/play above or below league average. So the .21 value for the 2018 Chiefs means that a QB dropback by the 2018 Chiefs would be expected to result in .21 more EPA than an average team.
 
 ```{r}
 dropbacks <- filter(post16_pred_dat, qb_dropback == 1)
+non_dropbacks <- filter(post16_pred_dat, qb_dropback == 0)
 
 mod <- lmer(epa ~ 1 + (1|posteam:season), data = dropbacks)
+mod_non_dropbacks <- lmer(epa ~ 1 + (1|posteam:season), data = non_dropbacks)
 
 ranef_rows <- str_split(rownames(ranef(mod)$'posteam:season'), ':')
-season <- sapply(ranef_rows, '[', 2)
+season <- as.numeric(sapply(ranef_rows, '[', 2))
 posteam <- sapply(ranef_rows, '[', 1)
+
+ranef_rows_non <- str_split(rownames(ranef(mod_non_dropbacks)$'posteam:season'), ':')
+season <- as.numeric(sapply(ranef_rows_non, '[', 2))
+posteam <- sapply(ranef_rows_non, '[', 1)
+
 
 passing_ranef <- data.frame(Team = posteam,
                             Season = season,
-                            passing_re = round(ranef(mod)$'posteam:season'[,1], 2))
+                            passing_re = ranef(mod)$'posteam:season'[,1])
+
+rushing_ranef <- data.frame(Team = posteam,
+                            Season = season,
+                            rushing_re = ranef(mod_non_dropbacks)$'posteam:season'[,1])
+
+ranefs <- passing_ranef %>%
+  inner_join(rushing_ranef, by = c('Team','Season'))
+
+final_pred_dat <- post16_pred_dat %>%
+  inner_join(ranefs, by = c('posteam' = 'Team','season' = 'Season')) %>%
+  mutate(team_string = str_c(posteam, '-', season),
+         team_idx = as.numeric(factor(team_string)))
 
 ```
 
-Our best EPA/dropback teams are the 2018 Chiefs, 2016 Falcons, and 2019 Ravens, all of which check out. Important to note with the Ravens that this includes dropbacks that turn into QB scrambles. The worst passing team is the 2018 Cardinals who threw for 18 interceptions against 15 touchdowns. Woof.
+Our best EPA/dropback teams are the 2018 Chiefs, 2016 Falcons, and 2019 Ravens, all of which check out. Important to note with the 2019 Ravens that this includes dropbacks that turn into QB scrambles. The worst passing team is the 2018 Cardinals who rode a QB group of Josh Rosen, Sam Bradford, and Mike Glennon to 18 interceptions against 15 touchdowns. Also one of those touchdowns came on a trick play by Larry Fitzgerald. Woof.
 
 ```{r}
-passing_ranef %>% 
+ranefs %>% 
+  mutate(passing_re = round(passing_re, 3),
+         rushing_re = round(rushing_re, 3)) %>%
   arrange(desc(passing_re)) %>%
-  rename('EPA/Play Above Average' = passing_re) %>%
+  rename('Passing EPA/Play Above Average' = passing_re,
+         'Rushing EPA/Play Above Average' = rushing_re) %>%
   datatable(filter = 'top', rownames = FALSE, options = list(
- columnDefs = list(list(className = 'dt-center', targets = 0:2))
+ columnDefs = list(list(className = 'dt-center', targets = 0:3))
   )
   )
 ```
 
 ## Final Model
 
-We have estimates of dropback probability and team ability which means we can move to estimating the model we specified at the beginning.
+We have estimates of dropback probability and team ability which means we can move to estimating the model we specified at the beginning. First, we'll fit a model where we include our predicted dropback probability along with random effects for team. This will give us estimates of how much more/less a team passed than we would expect given game state. Next, we'll fit a model where we include the quality of the passing offense relative to the rushing offensive which will turn the random effects into estimates of how much more/less a team passed given the game states they faced and the relative quality of their quarterback.
+
+
+```{r, eval = F}
+stan_mod <- stan_model(file = 'C:/Users/richjand/Documents/nfl-run-pass/stan-models/pass-prob-stan-model-no-epa.stan')
+
+stan_dat_no_epa <- list(
+  N = nrow(final_pred_dat),
+  I = max(final_pred_dat$team_idx),
+  y = as.numeric(final_pred_dat$qb_dropback) - 1,
+  ii = final_pred_dat$team_idx,
+  phat = arm::logit(final_pred_dat$dropback_prob)
+)
+
+fit_no_epa <- sampling(stan_mod, data = stan_dat_no_epa, cores = 3, chains = 4, iter = 1000)
+```
+
+Below we'll print some parameters from the model. $alpha$ is the intercept, $beta_phat$ is the coefficient on the predicted pass probability from our xgboost model, and $sigma_mu$ is the standard deviation in team effects. We'd expect a coefficient of 1 on $beta_phat$, so I should probably go back and look at why it's coming out a little high. While there's clearly a difference between $beta_phat$ and our expectation, it's pretty small in substantive terms. If our xgboost model was saying that the probability of a pass is .6, this model would suggest that that true probability is something like .61 for an average team. The .18 value of $sigma_mu$ means that our predicted probabilities for different teams would range from about .52 on the low end and .69 on the high end for a play where an average team is at .6.
 
 ```{r}
-post16_pred_dat %>%
-  left_join(passing_ranef, by = c('posteam'))
+print(fit_no_epa, pars = c('alpha','beta_phat','sigma_mu'))
+```
+
+
+
+```{r, eval = F}
+stan_mod_epa <- stan_model(file = 'C:/Users/richjand/Documents/nfl-run-pass/stan-models/pass-prob-stan-model-with-epa.stan')
+
+x <- data.matrix(data.frame(arm::logit(final_pred_dat$dropback_prob), final_pred_dat$passing_re - final_pred_dat$rushing_re))
+  
+stan_dat_epa <- list(
+  N = nrow(final_pred_dat),
+  K = ncol(x),
+  I = max(final_pred_dat$team_idx),
+  y = as.numeric(final_pred_dat$qb_dropback) - 1,
+  ii = final_pred_dat$team_idx,
+  x = x
+)
+
+fit_epa <- sampling(stan_mod_epa, data = stan_dat_epa, cores = 3, chains = 4, iter = 1000)
+```
+
+
+
+```{r}
+print(fit_epa, pars = c('alpha','beta','sigma_mu'))
 ```
